metadata/objects/Followup__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Followups</relationshipLabel>
        <relationshipName>Followups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When__c</fullName>
        <label>When</label>
        <type>Date</type>
    </fields>
    <label>Followup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Followup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Followups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>